orders.jsx fixing print hiding and aligning everything

--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -32,16 +32,6 @@ input#item_order_quantity_refunded {
   justify-content: space-around;
 }
 
-// +++++++++++++++++++++++++ .item-order-table +++++++++++++++++++++++
-
-.total-refund {
-  background-color: yellow;
-}
-
-input#item_order_quantity_refunded {
-  width: 50px;
-}
-
 #print-refund-div {
   display: flex;
   justify-content: space-around;
